[package]
name = "audio-select"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
druid = "0.8.3"
im = "15.1.0"
mouse_position = "0.1.3"
num = "0.4.0"
pulse = { version = "2.27.1", package = "libpulse-binding" }
serde = { version = "1.0.159", features = ["derive"] }
